--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             >
                 <a-entity
                     id="bowser-model"
-                    scale="0.00010632642054330069 0.00010632642054330069 0.00010632642054330069"
+                    scale="1 1 1"
+                    rotation="90 0 0"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     class="clickable"
